[package]
name = "linfa-ensemble"
version = "0.1.0"
edition = "2018"
authors = ["Alina Caraiman <alinacaraiman@protonmail.com"]
description = "A collection of ensemble methods based on decision trees"
license = "MIT/Apache-2.0"

repository = "https://github.com/rust-ml/linfa"
readme = "README.md"

keywords = ["machine-learning", "linfa", "ensemble", "random-forest", "supervised"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
ndarray = { version = "0.15.6" , features = ["rayon", "approx"]}
ndarray-rand = "0.14"
ndarray-linalg = {version = "0.16", default-features = false}
linfa-trees = {path = "../linfa-trees"}
linfa-linear = {path = "../linfa-linear"}
linfa = { path = "../.."}
thiserror = "1.0.25"

[dev-dependencies]
rand_isaac = "0.3.0"
ndarray-npy = { version = "0.8.1", default-features = false }
criterion = "0.4"
serde_json = "1"
approx = "0.5.1"
